--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body class="fullscreen">
   <div class="container">
-    <h1 class="title">Hello Irfan!!</h1>
+    <h1 class="title">This is PWA (Progessive web app)</h1>
   </div>
   <script src="scripts/main.js"></script>
 </body>
